feat: change ServiceRegistrationDTO and MetricResourceDTO to multi-host (#26 task 5)
- ServiceRegistrationDTO: replace host+services with hosts[] of ServiceRegistrationHostDTO
- MetricResourceDTO: replace host+services with hosts[] of MetricResourceNodeDTO
- ServiceDiscoveryServiceImpl: build one entry per discovered node, each with local services
- New OpenAPI schemas: ServiceRegistrationHostDTO, MetricResourceNodeDTO

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>