@@ -4,7 +4,6 @@ import dk.viplev.agent.domain.exception.ContainerRuntimeException;
 import dk.viplev.agent.domain.exception.ViplevApiException;
 import dk.viplev.agent.domain.model.ContainerInfo;
 import dk.viplev.agent.domain.model.NodeInfo;
-import dk.viplev.agent.generated.model.ServiceDTO;
 import dk.viplev.agent.generated.model.ServiceRegistrationDTO;
 import dk.viplev.agent.port.outbound.container.ContainerPort;
 import dk.viplev.agent.port.outbound.discovery.NodeDiscoveryPort;
@@ -64,21 +63,41 @@ class ServiceDiscoveryServiceImplTest {
         verify(viplevApiPort).registerServices(captor.capture());
 
         var registration = captor.getValue();
-        assertThat(registration.getHost().getMachineId()).isEqualTo("daemon-id-abc123");
-        assertThat(registration.getHost().getName()).isEqualTo("test-host");
-        assertThat(registration.getHost().getIpAddress()).isEqualTo("192.168.1.1");
-        assertThat(registration.getHost().getOs()).isEqualTo("Linux");
-        assertThat(registration.getHost().getCpuCores()).isEqualTo(8);
-        assertThat(registration.getHost().getRamTotalBytes()).isEqualTo(16_000_000_000L);
-        assertThat(registration.getServices()).hasSize(2);
+        assertThat(registration.getHosts()).hasSize(1);
 
-        var nginx = registration.getServices().get(0);
-        assertThat(nginx.getServiceName()).isEqualTo("nginx");
-        assertThat(nginx.getImageName()).isEqualTo("nginx:latest");
-        assertThat(nginx.getImageSha()).isEqualTo("sha256:aaa");
+        var hostEntry = registration.getHosts().getFirst();
+        assertThat(hostEntry.getHost().getMachineId()).isEqualTo("daemon-id-abc123");
+        assertThat(hostEntry.getHost().getName()).isEqualTo("test-host");
+        assertThat(hostEntry.getHost().getIpAddress()).isEqualTo("192.168.1.1");
+        assertThat(hostEntry.getHost().getOs()).isEqualTo("Linux");
+        assertThat(hostEntry.getHost().getCpuCores()).isEqualTo(8);
+        assertThat(hostEntry.getHost().getRamTotalBytes()).isEqualTo(16_000_000_000L);
+        assertThat(hostEntry.getServices()).hasSize(2);
 
-        var redis = registration.getServices().get(1);
-        assertThat(redis.getServiceName()).isEqualTo("redis");
+        assertThat(hostEntry.getServices().get(0).getServiceName()).isEqualTo("nginx");
+        assertThat(hostEntry.getServices().get(0).getImageName()).isEqualTo("nginx:latest");
+        assertThat(hostEntry.getServices().get(0).getImageSha()).isEqualTo("sha256:aaa");
+        assertThat(hostEntry.getServices().get(1).getServiceName()).isEqualTo("redis");
+    }
+
+    @Test
+    void syncServices_multipleNodes_eachGetsServices() {
+        var node2 = new NodeInfo("daemon-id-xyz", "node2", "192.168.1.2", "Linux", "5.15.0", 4, 8_000_000_000L);
+        when(containerPort.listContainers()).thenReturn(List.of(
+                new ContainerInfo("id1", "nginx", "nginx:latest", "sha256:aaa", "running", null, null, null, null)));
+        when(nodeDiscoveryPort.discoverNodes()).thenReturn(List.of(testNode, node2));
+
+        service.syncServices();
+
+        var captor = ArgumentCaptor.forClass(ServiceRegistrationDTO.class);
+        verify(viplevApiPort).registerServices(captor.capture());
+
+        var hosts = captor.getValue().getHosts();
+        assertThat(hosts).hasSize(2);
+        assertThat(hosts.get(0).getHost().getMachineId()).isEqualTo("daemon-id-abc123");
+        assertThat(hosts.get(1).getHost().getMachineId()).isEqualTo("daemon-id-xyz");
+        assertThat(hosts.get(0).getServices()).hasSize(1);
+        assertThat(hosts.get(1).getServices()).hasSize(1);
     }
 
     @Test
@@ -93,8 +112,7 @@ class ServiceDiscoveryServiceImplTest {
         var captor = ArgumentCaptor.forClass(ServiceRegistrationDTO.class);
         verify(viplevApiPort).registerServices(captor.capture());
 
-        ServiceDTO dto = captor.getValue().getServices().get(0);
-        assertThat(dto.getCpuLimit()).isEqualTo(2.0);
+        assertThat(captor.getValue().getHosts().getFirst().getServices().get(0).getCpuLimit()).isEqualTo(2.0);
     }
 
     @Test
@@ -109,8 +127,7 @@ class ServiceDiscoveryServiceImplTest {
         var captor = ArgumentCaptor.forClass(ServiceRegistrationDTO.class);
         verify(viplevApiPort).registerServices(captor.capture());
 
-        ServiceDTO dto = captor.getValue().getServices().get(0);
-        assertThat(dto.getCpuReservation()).isEqualTo(1.0);
+        assertThat(captor.getValue().getHosts().getFirst().getServices().get(0).getCpuReservation()).isEqualTo(1.0);
     }
 
     @Test
@@ -125,7 +142,7 @@ class ServiceDiscoveryServiceImplTest {
         var captor = ArgumentCaptor.forClass(ServiceRegistrationDTO.class);
         verify(viplevApiPort).registerServices(captor.capture());
 
-        ServiceDTO dto = captor.getValue().getServices().get(0);
+        var dto = captor.getValue().getHosts().getFirst().getServices().get(0);
         assertThat(dto.getCpuLimit()).isNull();
         assertThat(dto.getCpuReservation()).isNull();
         assertThat(dto.getMemoryLimitBytes()).isNull();
@@ -133,21 +150,7 @@ class ServiceDiscoveryServiceImplTest {
     }
 
     @Test
-    void syncServices_emptyContainerList_registersHostOnly() {
-        when(containerPort.listContainers()).thenReturn(List.of());
-        when(nodeDiscoveryPort.discoverNodes()).thenReturn(List.of(testNode));
-
-        service.syncServices();
-
-        var captor = ArgumentCaptor.forClass(ServiceRegistrationDTO.class);
-        verify(viplevApiPort).registerServices(captor.capture());
-
-        assertThat(captor.getValue().getHost().getMachineId()).isEqualTo("daemon-id-abc123");
-        assertThat(captor.getValue().getServices()).isEmpty();
-    }
-
-    @Test
-    void syncServices_emptyNodeList_sendsUnknownHost() {
+    void syncServices_emptyNodeList_registersEmptyHosts() {
         when(containerPort.listContainers()).thenReturn(List.of());
         when(nodeDiscoveryPort.discoverNodes()).thenReturn(List.of());
 
@@ -156,7 +159,7 @@ class ServiceDiscoveryServiceImplTest {
         var captor = ArgumentCaptor.forClass(ServiceRegistrationDTO.class);
         verify(viplevApiPort).registerServices(captor.capture());
 
-        assertThat(captor.getValue().getHost().getMachineId()).isEqualTo("unknown");
+        assertThat(captor.getValue().getHosts()).isEmpty();
     }
 
     @Test
